css/main.css
@font-face {
  font-family: HKGrotesk-medium;
  src: url("../font/HKGrotesk-Medium.otf") format("opentype");
}
@font-face {
  font-family: HKGrotesk-regular;
  src: url("../font/HKGrotesk-Regular.otf") format("opentype");
}
@font-face {
  font-family: HKGrotesk-light;
  src: url("../font/HKGrotesk-Light.otf") format("opentype");
}
html {
  width: 100vw;
}
body,
html {
  height: 100%;
  margin: 0;
  font-size: 16px;
  font-family: "HKGrotesk-medium", sans-serif;
  color: #222;
}
body {
  display: flex;
  scroll-behavior: smooth;
  overflow-y: scroll;
  overflow-x: hidden;
  position: relative;
  margin: 0 auto;
}
.main {
  max-width: 600px;
}
p {
  font-family: "HKGrotesk-regular", sans-serif;
  font-size: 14px;
  line-height: 22pt;
}
nav {
  display: flex;
  padding: 10px;
  width: 100%;
  min-height: 100px;
  margin: 10px auto;
  justify-content: space-between;
}
#amLogo {
  width: 100px;
}
#menuBtn {
  width: 32px;
  max-height: 100px;
  padding: 10px;
  display: flex;
  flex-direction: column;
  margin-right: 20px;
  margin-top: 20px;
  transition: 1.5s;
  -webkit-transition: 1.5s;
  -moz-transition: 1.5s;
  -ms-transition: 1.5s;
  -o-transition: 1.5s;
  cursor: pointer;
}
.menu-x {
  z-index: 99;
  background-image: url("../images/x-image.svg");
  background-repeat: no-repeat;
  background-size: contain;
  position: fixed;
  right: 10px;
}
.signin-x {
  cursor: pointer;
  width: 32px;
  height: 100px;
  z-index: 99;
  background-image: url("../images/x-image.svg");
  background-repeat: no-repeat;
  background-size: contain;
}
.menuLine {
  height: 2px;
  width: 100%;
  background-color: #212121;
  margin: 5px auto;
  transition: 1.5px;
}
.menuLine-hide {
  opacity: 0;
}
#menuLine-middle {
  width: 67%;
  margin: 3px 3px 3px 0;
}
.feature {
  padding: 15px;
}
h1 {
  font-size: 26px;
}
#loginBtns {
  display: flex;
  width: 90%;
  justify-content: space-between;
  max-width: 300px;
  min-height: 55px;
}
.arrow {
  background-image: url(../images/rightArrow.svg);
  background-size: 100% 125%;
  width: 50px;
  display: inline-block;
}
span.arrow {
  height: 17px;
  width: 12px;
}
.signInBtnCont {
  display: flex;
  cursor: pointer;
}

.fillerImage {
  height: 100px;
  width: 100%;
  margin: auto;
  background-image: url("../images/fillerImage-01.svg");
  background-size: 100% 100%;
  border: 0.5px rgb(209, 209, 208);
}
.bodyTile {
  text-align: center;
  margin: auto;
  width: 90%;
  padding: 30px 10px;
}
.bodyTile p {
  line-height: unset;
}
.appFeatureContainer {
  width: 100%;
  background-image: url("../images/yellow-grayBackground-01.svg");
  background-size: cover;
  padding-top: 10px;
}
.screenshotContainer {
  width: 252px;
  height: 432px;
  background-color: whitesmoke;
  border-radius: 35px;
  box-shadow: 0 0 10px black;
  margin: 60px auto;
}
.iosDownloadContainer {
  background-color: #ffcb0f;
  min-height: 250px;
}
.androidDownloadContainer {
  min-height: 250px;
  text-align: center;
}
.androidDownloadContainer p {
  width: 75%;
  margin: 20px auto;
  line-height: unset;
}
.iosDownloadContainer h3,
.androidDownloadContainer h3 {
  text-align: center;
  font-size: 18px;
  margin: unset;
  padding-top: 30px;
}
#appStoreLogo {
  width: 205px;
  margin: 30px auto 50px auto;
  display: block;
}
.emailInput {
  width: 80%;
  margin: auto;
  display: flex;
  flex-wrap: nowrap;
}
#emailInput {
  width: 50%;
  border-radius: 5px;
  border: 1px solid gainsboro;
  padding: 18px 0 18px 18px;
}
#notifyMeBtn {
  background-color: black;
  border: none;
  padding: 18px;
  border-radius: 3px;
  color: white;
  font-family: "HKGrotesk-light", sans-serif;
  font-size: 13px;
  margin-left: 5px;
}
.bold {
  font-weight: 900;
  font-size: 115%;
}
.footer {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 10px;
  background-color: gainsboro;
  min-height: 500px;
}
#footerNavUl {
  list-style: none;
  padding: 0;
  margin: 0;
}
.footerNavLi {
  padding: 10px 0;
}
#appStoreLogo-footer {
  width: 165px;
  margin: 35px 0;
}
#topBtn {
  font-weight: bold;
  background-image: url("../images/upArrow.svg");
  background-repeat: no-repeat;
  background-position-x: right;
  width: 125px;
  cursor: pointer;
}
.slide-out-menu {
  width: 100vw;
  height: 0;
  position: fixed;
  overflow-y: hidden;
  background-color: #ffcb0f;
  opacity: 0.95;
  transition: 1.5s;
}
.slide-out-nav {
  padding: unset;
  list-style: none;
  color: black;
  width: 85%;
  margin: 60px auto;
}
.show {
  width: 100%;
  height: 50%;
  border-bottom-left-radius: 25%;
  border-bottom-right-radius: 25%;
  display: block;
}
.slide-out-li {
  padding: 10px;
  margin: auto;
  max-width: 125px;
  text-align: center;
}
.slide-out-a {
  color: black;
  text-decoration: none;
  padding: 10px;
}
.slide-out-a:hover {
  color: white;
}

@keyframes slideOut {
  0% {
    width: 0;
    height: 0;
  }
  100% {
    width: 100vw;
    height: 95vh;
  }
}

/* SIGN UP PAGE */
.signupBody {
  background-image: url("../images/singupBackground.svg");
  background-size: cover;
  width: 0;
  height: 0;
  position: fixed;
  overflow: hidden;
}
.heading {
  text-align: center;
  margin: 10px auto 10px auto;
  width: 90%;
}
.signupContainer {
  width: 90%;
  max-width: 300px;
  height: 450px;
  background-color: whitesmoke;
  border-radius: 35px;
  box-shadow: 0 0 10px black;
  margin: 10px auto;
}
.showSignup {
  width: 100% !important;
  height: 100% !important;
}
.signupContainer .form {
  padding-left: 20px;
}
.formInput {
  background-color: transparent;
  border: none;
  width: 100%;
  border-bottom: 1px solid black;
}
.formLabel {
  margin-top: 3px;
  margin-bottom: 5px;
}
.long-logo {
  height: 30px;
  display: block;
}
.navbar {
  display: flex;
  justify-content: space-between;
  padding: 25px 25px 0 25px;
  height: 25px;
}
.profilePic {
  display: block;
  height: 75px;
  border: 1px dashed black;
  border-radius: 50%;
  padding: 5px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  margin: 10px;
}
.photoOption {
  width: 100px;
}
.photoHeader {
  width: 80%;
  padding: 20px 0 5px 5px;
  display: flex;
}
.photoOptions p {
  width: 100px;
  font-size: 75%;
  border-bottom: 1px solid black;
}
#signUpBtn {
  border: none;
  width: 90%;
  height: 40px;
  margin-top: 20px;
  color: white;
  background-color: #ffcb0f;
  border-radius: 50px;
  display: block;
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  -ms-border-radius: 50px;
  -o-border-radius: 50px;
}
.loginBtnLink {
  display: block;
  text-align: center;
  margin: 20px auto;
  color: black;
  text-decoration: none;
}

/* LOG IN PAGE */
.loginBody {
  background-color: white;
  width: 0;
  height: 0;
  overflow: hidden;
  position: fixed;
  overflow: hidden;
}
.loginBody p {
  text-align: center;
  line-height: unset;
  max-width: 90%;
  margin: auto;
}
.logoFeature {
  display: block;
  margin: auto;
  max-width: 350px;
  margin-top: 50px;
}
.loginBody .form p {
}
.loginBody .form {
  width: 95%;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.form-container {
  width: 95%;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.form-container p {
  text-align: left;
  margin: 20px 0;
  align-self: flex-start;
}
.loginBody .loginBtnLink {
  margin-top: 50px;
}

@media screen and (min-width: 600px) {
  body {
    align-items: center;
    justify-content: center;
  }
  .main{   
  align-self: flex-start;
  max-width: 100%;
  min-width: 100%;
  }
  .feature, .footer{
    text-align: center;
  }
  #appStoreLogo-footer, #loginBtns, #topBtn {
    align-self: center;
  }
  .emailInput{
    margin-left:25%;
  }
  
}

